# wmmm

./: .clang-tidy  .clangd  .gitignore  .gitmodules  .yamlfmt.yml  .yamllint.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  Taskfile.yml  example.yaml  flake.nix  library.json  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  nix.yml  release-please.yml
esphome/components/unilux_uart/: __init__.py  compile_flags.txt  unilux_uart.cpp  unilux_uart.h
esphome/components/wmmm/: __init__.py  compile_flags.txt  wmmm.cpp  wmmm.h
include/: aup.hpp  messages.hpp  wmmm.hpp
include/messages/: fan_speed.hpp  power.hpp
src/: aup.cpp  main.cpp  wmmm.cpp
stubs/: ArduinoJson.h
tasks/: cpp.yml  yaml.yml
tests/: test_add.cpp  test_aup.cpp  test_fan_speed.cpp  test_messages.cpp  test_power.cpp  test_wmmm.cpp
